--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
     "expo-cli": "^2.6.14",
+    "firebase": "^5.8.0",
+    "re-base": "^4.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-firebase": "^5.2.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
