--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "firebase": "^5.8.0",
     "re-base": "^4.0.0",
     "react": "16.5.0",
+    "react-devtools": "^3.6.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-firebase": "^5.2.0",
+    "react-native-maps": "^0.23.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
